--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.DataTemplates.FeaturedLinkTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:media="using:Microsoft.Xaml.Interactions.Media"
+    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
+    xmlns:media2="using:Microsoft.Toolkit.Uwp.UI.Media"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -36,8 +37,8 @@
             </DoubleAnimation>
             <DoubleAnimation
                 EnableDependentAnimation="True"
-                Storyboard.TargetProperty="ShadowOpacity"
-                Storyboard.TargetName="ShadowPanel"
+                Storyboard.TargetProperty="Opacity"
+                Storyboard.TargetName="CardShadow"
                 Duration="0:0:0.4" To="1"/>
         </Storyboard>
         <Storyboard x:Name="StoryboardZoomOut">
@@ -61,25 +62,34 @@
             </DoubleAnimation>
             <DoubleAnimation
                 EnableDependentAnimation="True"
-                Storyboard.TargetProperty="ShadowOpacity"
-                Storyboard.TargetName="ShadowPanel"
+                Storyboard.TargetProperty="Opacity"
+                Storyboard.TargetName="CardShadow"
                 Duration="0:0:0.4" To="0.6"/>
         </Storyboard>
     </UserControl.Resources>
 
-    <!--Root-->
-    <controls:DropShadowPanel
+    <!--Link button-->
+    <Button
         Height="80"
-        x:Name="ShadowPanel"
-        Color="Black"
-        ShadowOpacity="0.6"
-        BlurRadius="8"
-        OffsetY="4"
-        HorizontalContentAlignment="Stretch"
-        RenderTransformOrigin="0.5, 0.5">
-        <controls:DropShadowPanel.RenderTransform>
+        CornerRadius="8"
+        Style="{StaticResource ButtonRevealShowsAboveContentStyle}"
+        Background="{ThemeResource GitHubContributorBackgroundBrush}"
+        RenderTransformOrigin="0.5, 0.5"
+        HorizontalContentAlignment="Left"
+        Click="RootButton_Clicked">
+        <Button.RenderTransform>
             <ScaleTransform x:Name="RootTransform"/>
-        </controls:DropShadowPanel.RenderTransform>
+        </Button.RenderTransform>
+
+        <!-- Shadow -->
+        <ui:Effects.Shadow>
+            <media2:AttachedCardShadow
+                x:Name="CardShadow"
+                Color="Black"
+                Opacity="0.6"
+                BlurRadius="8"
+                Offset="4" />
+        </ui:Effects.Shadow>
 
         <!--Animation triggers-->
         <interactivity:Interaction.Behaviors>
@@ -95,16 +105,9 @@
             </core:EventTriggerBehavior>
         </interactivity:Interaction.Behaviors>
 
-        <!--Link button-->
-        <Button
-            CornerRadius="8"
-            Style="{StaticResource ButtonRevealShowsAboveContentStyle}"
-            Background="{ThemeResource GitHubContributorBackgroundBrush}"
-            Click="RootButton_Clicked">
-            <Image
-                Source="{x:Bind Image, Mode=OneWay}"
-                Stretch="UniformToFill"
-                VerticalAlignment="Center"/>
-        </Button>
-    </controls:DropShadowPanel>
+        <Image
+            Source="{x:Bind Image, Mode=OneWay}"
+            Stretch="UniformToFill"
+            VerticalAlignment="Center"/>
+    </Button>
 </UserControl>
