--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Shell.AboutSubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
@@ -28,12 +28,12 @@
             <RelativePanel Padding="12,0,12,12">
 
                 <!--App description-->
-                <controls:MarkdownTextBlock
+                <TextBlock
                     x:Uid="About/Description"
                     FontSize="13"
                     IsTextSelectionEnabled="False"
-                    Text="**Brainf*ck#** is..."
-                    Background="Transparent"
+                    attachedProperties:MarkdownHelper.Text="**Brainf*ck#** is..."
+                    TextWrapping="WrapWholeWords"
                     x:Name="DescriptionBlock"
                     Margin="0,12,0,0"/>
 
