--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/ReviewPromptSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/ReviewPromptSubPage.xaml
@@ -1,11 +1,13 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Shell.ReviewPromptSubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
+    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
+    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
+    xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -31,10 +33,9 @@
             </Grid.RowDefinitions>
 
             <!--Text-->
-            <controls:MarkdownTextBlock
+            <TextBlock
                 x:Uid="ReviewPrompt/Body"
-                Background="Transparent"
-                Text="Thank you for downloading **Brainf\*ck#**!&#x0a;&#x0a;Are you enjoying it so far?"
+                attachedProperties:MarkdownHelper.Text="Thank you for downloading **Brainf\*ck#**!&#x0a;&#x0a;Are you enjoying it so far?"
                 IsTextScaleFactorEnabled="False"/>
 
             <!--Emojis-->
@@ -45,43 +46,44 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <controls:DropShadowPanel
-                    Color="Black"
-                    ShadowOpacity="0.6"
-                    BlurRadius="8"
-                    OffsetY="4"
-                    HorizontalContentAlignment="Stretch">
-                    <Button
-                        x:Uid="ReviewPrompt/Review"
-                        Background="#FF1A1B1C"
-                        Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                        ToolTipService.ToolTip="Leave a review in the Store"
-                        Command="{x:Bind ViewModel.RequestReviewCommand}"
-                        Click="ActionButton_OnClick">
-                        <TextBlock
-                            Text="😄"
-                            Style="{StaticResource EmojyBlockStyle}"/>
-                    </Button>
-                </controls:DropShadowPanel>
-                <controls:DropShadowPanel
-                    Grid.Column="1"
-                    Color="Black"
-                    ShadowOpacity="0.6"
-                    BlurRadius="8"
-                    OffsetY="4"
-                    HorizontalContentAlignment="Stretch">
-                    <Button
-                        x:Uid="ReviewPrompt/Contact"
-                        Background="#FF1A1B1C"
-                        Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                        ToolTipService.ToolTip="Contact the developer"
-                        Command="{x:Bind ViewModel.SendFeedbackEmailCommand}"
-                        Click="ActionButton_OnClick">
-                        <TextBlock
-                            Text="😥"
-                            Style="{StaticResource EmojyBlockStyle}"/>
-                    </Button>
-                </controls:DropShadowPanel>
+                <Button
+                    x:Uid="ReviewPrompt/Review"
+                    Background="#FF1A1B1C"
+                    Style="{StaticResource ExpandedSquareButtonRevealStyle}"
+                    ToolTipService.ToolTip="Leave a review in the Store"
+                    Command="{x:Bind ViewModel.RequestReviewCommand}"
+                    Click="ActionButton_OnClick">
+
+                    <!-- Shadow -->
+                    <ui:Effects.Shadow>
+                        <media:AttachedCardShadow
+                            Color="Black"
+                            Opacity="0.6"
+                            BlurRadius="8"
+                            Offset="4" />
+                    </ui:Effects.Shadow>
+                        
+                    <TextBlock Text="😄" Style="{StaticResource EmojyBlockStyle}"/>
+                </Button>
+                <Button
+                    x:Uid="ReviewPrompt/Contact"
+                    Background="#FF1A1B1C"
+                    Style="{StaticResource ExpandedSquareButtonRevealStyle}"
+                    ToolTipService.ToolTip="Contact the developer"
+                    Command="{x:Bind ViewModel.SendFeedbackEmailCommand}"
+                    Click="ActionButton_OnClick">
+
+                    <!-- Shadow -->
+                    <ui:Effects.Shadow>
+                        <media:AttachedCardShadow
+                            Color="Black"
+                            Opacity="0.6"
+                            BlurRadius="8"
+                            Offset="4" />
+                    </ui:Effects.Shadow>
+                        
+                    <TextBlock Text="😥" Style="{StaticResource EmojyBlockStyle}"/>
+                </Button>
             </Grid>
         </Grid>
     </host:SubPageFrame>
