--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.IdeResultSubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,8 +15,8 @@
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:models="using:Brainf_ckSharp.Shared.Models.Ide.Views"
     xmlns:collections="using:CommunityToolkit.Mvvm.Collections"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
+    xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
@@ -45,10 +45,10 @@
             <VisualStateGroup>
                 <VisualState x:Name="ButtonsHiddenState">
                     <VisualState.Setters>
-                        <Setter Target="ButtonsPanel.IsHitTestVisible" Value="False"/>
+                        <Setter Target="ButtonsGrid.IsHitTestVisible" Value="False"/>
                     </VisualState.Setters>
                     <VisualState.Storyboard>
-                        <Storyboard TargetName="ButtonsPanel">
+                        <Storyboard TargetName="ButtonsGrid">
                             <DoubleAnimation
                                 Storyboard.TargetProperty="Height"
                                 EnableDependentAnimation="True"
@@ -66,10 +66,10 @@
                         <StateTrigger IsActive="{x:Bind ViewModel.IsAtBreakpoint, Mode=OneWay}"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="ButtonsPanel.IsHitTestVisible" Value="True"/>
+                        <Setter Target="ButtonsGrid.IsHitTestVisible" Value="True"/>
                     </VisualState.Setters>
                     <VisualState.Storyboard>
-                        <Storyboard TargetName="ButtonsPanel">
+                        <Storyboard TargetName="ButtonsGrid">
                             <DoubleAnimation
                                 Storyboard.TargetProperty="Height"
                                 EnableDependentAnimation="True"
@@ -172,61 +172,61 @@
             </SemanticZoom>
 
             <!--Breakpoints control buttons-->
-            <controls:DropShadowPanel
-                x:Name="ButtonsPanel"
+            <Grid                    
+                x:Name="ButtonsGrid"
                 x:Load="False"
+                ColumnSpacing="4"
                 Height="0"
                 Opacity="0"
-                Grid.Row="1"
-                Color="Black"
-                BlurRadius="12"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Stretch">
-                <Grid ColumnSpacing="4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
+                Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-                    <!--Continue-->
-                    <Button
-                        Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                        Background="#FF171717"
-                        Command="{x:Bind ViewModel.ContinueCommand}">
-                        <StackPanel Orientation="Horizontal">
-                            <Polygon 
-                                Points="0,0 0,18.75 15,9.375" 
-                                Stroke="DarkGreen" 
-                                Fill="Green" 
-                                VerticalAlignment="Center"/>
-                            <TextBlock
-                                Margin="12,0,0,0"
-                                Text="Continue"/>
-                        </StackPanel>
-                    </Button>
+                <!-- Shadow -->
+                <ui:Effects.Shadow>
+                    <media:AttachedCardShadow Color="Black" BlurRadius="12" />
+                </ui:Effects.Shadow>
 
-                    <!--Skip-->
-                    <Button
-                        Grid.Column="1"
-                        Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                        Background="#FF171717"
-                        Command="{x:Bind ViewModel.SkipCommand}">
-                        <StackPanel Orientation="Horizontal">
-                            <Polygon 
-                                Points="0,0 0,18.75 12,9.375"
-                                Stroke="DarkGreen"
-                                Fill="#FF4F824C"/>
-                            <Polygon
-                                Points="0,0 0,18.75 12,9.375"
-                                Stroke="DarkGreen"
-                                Fill="#FF4F824C"/>
-                            <TextBlock
-                                Margin="12,0,0,0"
-                                Text="Skip"/>
-                        </StackPanel>
-                    </Button>
-                </Grid>
-            </controls:DropShadowPanel>
+                <!--Continue-->
+                <Button
+                    Style="{StaticResource ExpandedSquareButtonRevealStyle}"
+                    Background="#FF171717"
+                    Command="{x:Bind ViewModel.ContinueCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Polygon 
+                            Points="0,0 0,18.75 15,9.375" 
+                            Stroke="DarkGreen" 
+                            Fill="Green" 
+                            VerticalAlignment="Center"/>
+                        <TextBlock
+                            Margin="12,0,0,0"
+                            Text="Continue"/>
+                    </StackPanel>
+                </Button>
+
+                <!--Skip-->
+                <Button
+                    Grid.Column="1"
+                    Style="{StaticResource ExpandedSquareButtonRevealStyle}"
+                    Background="#FF171717"
+                    Command="{x:Bind ViewModel.SkipCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Polygon 
+                            Points="0,0 0,18.75 12,9.375"
+                            Stroke="DarkGreen"
+                            Fill="#FF4F824C"/>
+                        <Polygon
+                            Points="0,0 0,18.75 12,9.375"
+                            Stroke="DarkGreen"
+                            Fill="#FF4F824C"/>
+                        <TextBlock
+                            Margin="12,0,0,0"
+                            Text="Skip"/>
+                    </StackPanel>
+                </Button>
+            </Grid>
         </Grid>
     </host:SubPageFrame>
 </UserControl>
