--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/FeaturedLinkTemplate.xaml
@@ -7,8 +7,8 @@
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:media="using:Microsoft.Xaml.Interactions.Media"
-    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
-    xmlns:media2="using:Microsoft.Toolkit.Uwp.UI.Media"
+    xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:media2="using:CommunityToolkit.WinUI.Media"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
