--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.Host.Header.HeaderPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:animations="using:CommunityToolkit.WinUI.Animations"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:header="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
     mc:Ignorable="d"
