--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.Host.Shell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     xmlns:controls="using:Brainf_ckSharp.Uwp.Controls.Windows.UI.Xaml.Controls"
     xmlns:views="using:Brainf_ckSharp.Uwp.Views"
     xmlns:shellHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
