Add 'ExecutionOptions', code refactoring

--- a/src/Brainf_ckSharp/Configurations/Configuration.tt
+++ b/src/Brainf_ckSharp/Configurations/Configuration.tt
@@ -46,9 +46,9 @@ public readonly ref partial struct <#=name#>Configuration
     public readonly DataType? DataType;
 
     /// <summary>
-    /// The setting to control whether overflow is enabled
+    /// The setting to control the execution options to run the script
     /// </summary>
-    public readonly bool IsOverflowEnabled;
+    public readonly ExecutionOptions ExecutionOptions;
 
     /// <summary>
     /// The token to cancel a long running execution
