Update UWP app, add new settings toggle

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+<UserControl
     x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Shell.Settings.SettingsSubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -190,23 +190,31 @@
             x:DataType="sections:InterpreterSettingsSectionViewModel">
             <StackPanel Spacing="4">
 
-                <!--Overflow mode-->
+                <!--Data type-->
                 <TextBlock
-                    x:Uid="Settings/OverflowMode"
+                    x:Uid="Settings/DataType"
                     TextWrapping="Wrap"
                     Text="Overflow mode"/>
                 <controls:ComboBoxWithNoScrollWheelSupport
                     CornerRadius="0"
                     Margin="0,4,0,0"
                     MinWidth="140"
-                    ItemsSource="{x:Bind OverflowModes}"
-                    SelectedItem="{x:Bind OverflowMode, Mode=TwoWay}">
+                    ItemsSource="{x:Bind DataTypes}"
+                    SelectedItem="{x:Bind DataType, Mode=TwoWay}">
                     <ComboBox.ItemTemplate>
-                        <DataTemplate x:DataType="interpreterEnums:OverflowMode">
-                            <TextBlock Text="{x:Bind converters:EnumConverter.Convert((interpreterEnums:OverflowMode))}"/>
+                        <DataTemplate x:DataType="interpreterEnums:DataType">
+                            <TextBlock Text="{x:Bind converters:EnumConverter.Convert((interpreterEnums:DataType))}"/>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </controls:ComboBoxWithNoScrollWheelSupport>
+
+                <!--Allow overflow-->
+                <TextBlock
+                    x:Uid="Settings/AllowOverflow"
+                    Margin="0,8,0,0"
+                    TextWrapping="Wrap"
+                    Text="Allow overflow"/>
+                <ToggleSwitch IsOn="{x:Bind IsOverflowEnabled, Mode=TwoWay}"/>
 
                 <!--Memory size-->
                 <TextBlock
